--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "lib": ["esnext"],
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": [
     "src"
